feat: Update next.config.mjs, package.json, clubList.tsx, and tailwind.config.ts
- Enable experimental feature missingSuspenseWithCSRBailout in next.config.mjs
- Add eslintIgnore rule for components/ui/stepper.tsx in package.json
- Import Club type from "@/lib/types" in clubList.tsx
- Add red color variant in tailwind.config.ts
- Update clubChart.tsx to disable eslint and import Club type from "@/lib/types"
- Update globals.css to modify color variables

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "eslintIgnore": [
+    "components/ui/stepper.tsx"
+  ],
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@radix-ui/react-checkbox": "^1.1.1",
