--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,13 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "eslintIgnore": [
+    "components/ui/stepper.tsx"
+  ],
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
