--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,6 +4,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "target": "ES6",
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
