--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -35,6 +36,7 @@
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
