--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.19.3",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
