--- a/.docker/nextjs/Dockerfile
+++ b/.docker/nextjs/Dockerfile
@@ -1,14 +1,40 @@
-FROM node:latest
+# Stage 1: Build the Next.js application
+FROM node:20 AS builder
 
 WORKDIR /app
 
+# Copy package.json and package-lock.json
 COPY package*.json ./
-RUN npm install
 
+# Install dependencies
+RUN npm ci
+
+# Copy the rest of the application code
 COPY . .
 
+# Build the Next.js application
 RUN npm run build
 
-EXPOSE 443
+# Stage 2: Set up the production environment
+FROM node:20-alpine
 
+WORKDIR /app
+
+# Copy package.json and package-lock.json
+COPY package*.json ./
+
+# Install only production dependencies
+RUN npm ci --only=production
+
+# Copy the built application from the builder stage
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+
+# Copy the next.config.js file
+COPY next.config.js ./
+
+# Expose the port the app runs on
+EXPOSE 3000
+
+# Start the application
 CMD ["npm", "start"]
