--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -1,49 +1,34 @@
-worker_processes auto;
-
-error_log /proc/self/fd/2 info;
-pid /var/run/nginx.pid;
-
 events {
-    worker_connections 4096;
-    multi_accept on;
-    use epoll;
+    worker_connections 1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log /proc/self/fd/1 main;
-
-    sendfile on;
-    keepalive_timeout 0;
-    gzip on;
-
     server {
         listen 80;
-
-        location /static/ {
-            alias /code/static/;
-        }
-
-        location /media/ {
-            alias /code/media/;
+        server_name sejm-stats.com;
+        
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
         }
 
         location / {
-            proxy_pass http://unix:/code/gunicorn.sock;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header Host $host;
-            proxy_redirect off;
+            return 301 https://$host$request_uri;
+        }
+    }
 
-            proxy_buffers 16 32k;
-            proxy_busy_buffers_size 64k;
-            proxy_buffer_size 16k;
+    server {
+        listen 443 ssl;
+        server_name sejm-stats.com;
+
+        ssl_certificate /etc/letsencrypt/live/sejm-stats.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/sejm-stats.com/privkey.pem;
+
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
