feat: Update server_name in nginx configuration files
This commit updates the `server_name` directive in the `.docker/nginx/default.conf` and `.docker/nginx/default.conf` files. The domain name has been changed from `sejm-stats.com` to `sejm-stats.pl` to match the correct domain for the application. This change ensures that the server correctly handles requests for the updated domain.

--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name sejm-stats.com;
+        server_name sejm-stats.pl;
         
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -18,10 +18,10 @@ http {
 
     server {
         listen 443 ssl;
-        server_name sejm-stats.com;
+        server_name sejm-stats.pl;
 
-        ssl_certificate /etc/letsencrypt/live/sejm-stats.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/sejm-stats.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/sejm-stats.pl/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/sejm-stats.pl/privkey.pem;
 
         location / {
             proxy_pass http://frontend:3000;
