feat: Update nginx configuration to use new domain name
This commit updates the nginx configuration in the `docker-compose.yml` file to use the new domain name `sejm-stats.pl` instead of `sejm-stats.com`. The `server_name` directive has been modified to reflect this change. This ensures that the server correctly handles requests for the updated domain.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,10 +55,10 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "8080:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     depends_on:
