feat: Update certbot image and command in docker-compose.yml
This commit updates the certbot image and command in the `docker-compose.yml` file. The image has been changed to `certbot/dns-cloudflare` and the command has been modified to use the `--dns-cloudflare` option with the `--dns-cloudflare-credentials` flag. This change allows for DNS validation using Cloudflare for certificate renewal.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,12 +67,11 @@ services:
       - sejm
 
   certbot:
-    image: certbot/certbot
+    image: certbot/dns-cloudflare
     volumes:
       - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email michalskibinski109@gmail.com -d sejm-stats.pl --agree-tos
-
+      - ./cloudflare.ini:/cloudflare.ini
+    command: certonly --dns-cloudflare --dns-cloudflare-credentials /cloudflare.ini --email michalskibinski109@gmail.com -d sejm-stats.pl --agree-tos --non-interactive
 volumes:
   postgres_data:
 
