--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,6 @@ services:
     volumes:
       - ./src:/code
     # - ./src/manage.py:/code/manage.py
-    ports:
-      - ${EXTERNAL_NGINX_PORT:-80}:80
     env_file:
       - .env
     networks:
@@ -42,7 +40,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://app # Set the API URL to the app service
+      - NEXT_PUBLIC_API_URL=https://sejm-stats.pl/api
     depends_on:
       - app
     networks:
