--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -35,7 +35,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://app;
+        proxy_pass http://unix:/code/gunicorn.sock;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
