--- a/.docker/python/supervisord.conf
+++ b/.docker/python/supervisord.conf
@@ -1,23 +1,13 @@
 [supervisord]
-nodaemon = true
-logfile = /dev/stdout
-logfile_maxbytes = 0
-pidfile = /run/supervisord.pid
-
-[program:nginx]
-command=nginx -g 'daemon off;'
-process_name=%(program_name)s_%(process_num)02d
-numprocs=1
-autostart=true
-autorestart=false
-startsecs=0
-redirect_stderr=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
+nodaemon=true
+user=root
+logfile=/var/log/supervisor/supervisord.log
+pidfile=/var/run/supervisord.pid
 
 [program:gunicorn]
 command=gunicorn core.wsgi:application --bind unix:/code/gunicorn.sock
 directory=/code
+user=www-data
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
@@ -28,6 +18,16 @@ stderr_logfile_maxbytes=0
 [program:celery]
 command=celery -A core worker -l INFO
 directory=/code
+user=www-data
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:nginx]
+command=nginx -g 'daemon off;'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
