--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -1,47 +1,41 @@
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    '' close;
+worker_processes auto;
+
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 8080;
-    server_name sejm-stats.pl;
-    
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-server {
-    listen 443 ssl;
-    server_name sejm-stats.pl;
+    access_log  /var/log/nginx/access.log  main;
 
-    ssl_certificate /etc/letsencrypt/live/sejm-stats.pl/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/sejm-stats.pl/privkey.pem;
+    sendfile        on;
+    keepalive_timeout  65;
 
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    server {
+        listen 8080;
+        server_name sejm-stats.pl;
 
-    location /api/ {
-        proxy_pass http://unix:/code/gunicorn.sock;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /api/ {
+            proxy_pass http://unix:/code/gunicorn.sock;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
