--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,26 @@ services:
     volumes:
       - ./src:/code
       - app-socket:/code
-    # - ./src/manage.py:/code/manage.py
+    ports:
+      - "8080:8080"
     env_file:
       - .env
+    networks:
+      - sejm
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "8080:8080"
+      - "443:443"
+    volumes:
+      - ./.docker/nginx/default.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+      - app-socket:/code
+    depends_on:
+      - frontend
+      - app
     networks:
       - sejm
   frontend:
@@ -51,20 +68,6 @@ services:
     image: redis:latest
     networks:
       - sejm
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "8080:8080"
-      - "443:443"
-    volumes:
-      - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    depends_on:
-      - frontend
-    networks:
-      - sejm
-
   certbot:
     image: certbot/dns-cloudflare
     volumes:
