--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -18,8 +18,17 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 8080;
+        listen 80;
         server_name sejm-stats.pl;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name sejm-stats.pl;
+
+        ssl_certificate /etc/letsencrypt/live/sejm-stats.pl/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/sejm-stats.pl/privkey.pem;
 
         location / {
             proxy_pass http://frontend:3000;
@@ -31,7 +40,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://unix:/code/gunicorn.sock;
+            proxy_pass http://app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
