--- a/.docker/python/Dockerfile
+++ b/.docker/python/Dockerfile
@@ -1,32 +1,23 @@
-FROM python:3.12 AS base
+FROM python:3.12-slim
+
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+
 WORKDIR /code
 
-RUN useradd nginx && usermod -u 1001 www-data && groupmod -g 1001 www-data
-
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends gcc libpq-dev postgresql-client nginx supervisor \
-    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libpq-dev \
+    postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /var/log/supervisor
-
-FROM base AS dev
-
-COPY ./.docker/python/docker-entrypoint.sh /code/
-RUN chmod +x /code/docker-entrypoint.sh
-
-FROM base AS prod
 COPY requirements.txt /code/
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
 COPY src /code/
-COPY ./.docker/python/docker-entrypoint.sh /etc/entrypoint.sh
-COPY ./.docker/python/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-COPY ./.docker/nginx/default.conf /etc/nginx/nginx.conf
-RUN chmod +x /etc/entrypoint.sh
+COPY .docker/python/docker-entrypoint.sh /code/docker-entrypoint.sh
+RUN chmod +x /code/docker-entrypoint.sh
 
 EXPOSE 8000
 
-ENTRYPOINT ["/etc/entrypoint.sh"]
+ENTRYPOINT ["/code/docker-entrypoint.sh"]
