build: Update frontend Dockerfile to use Dockerfile.nextjs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
 
   frontend:
     build:
-      context: .
+      context: ./frontend/
       dockerfile: Dockerfile.nextjs
     labels:
       - "traefik.enable=true"
