--- a/nginx.conf
+++ b/nginx.conf
@@ -1,58 +1,84 @@
-# Redirect HTTP traffic to HTTPS and handle ACME challenge for Let's Encrypt
-server {
-    listen 80;
-    server_name sejm-stats.pl www.sejm-stats.pl;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
+events {
+    worker_connections 1024;
 }
 
-# HTTPS server configuration
-server {
-    listen 443 ssl;
-    server_name sejm-stats.pl www.sejm-stats.pl;
-    # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-    ssl_certificate /etc/letsencrypt/live/sejm-stats.pl/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/sejm-stats.pl/privkey.pem;
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6; # Good balance between compression and CPU usage
-    gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-    location /static/ {
-        alias /static/;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log main;
+    sendfile on;
+    keepalive_timeout 65;
+
+    server {
+        listen 80;
+        server_name sejm-stats.pl www.sejm-stats.pl;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
 
-    location /media/ {
-        alias /media/;
-    }
-    location /api/ {
-        proxy_pass http://web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen 443 ssl;
+        server_name sejm-stats.pl www.sejm-stats.pl;
 
-        # Optimized proxy buffering
-        proxy_buffers 16 32k;
-        proxy_busy_buffers_size 64k;
-        proxy_buffer_size 16k;
-    }
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        ssl_certificate /etc/letsencrypt/live/sejm-stats.pl/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/sejm-stats.pl/privkey.pem;
 
-        # Optimized proxy buffering
-        proxy_buffers 16 32k;
-        proxy_busy_buffers_size 64k;
-        proxy_buffer_size 16k;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
+        gzip on;
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 6;
+        gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+        location /static/ {
+            alias /static/;
+        }
+
+        location /media/ {
+            alias /media/;
+        }
+
+        location /api/ {
+            proxy_pass http://web:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_buffers 16 32k;
+            proxy_busy_buffers_size 64k;
+            proxy_buffer_size 16k;
+        }
+
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_buffers 16 32k;
+            proxy_busy_buffers_size 64k;
+            proxy_buffer_size 16k;
+        }
     }
 }
