feat: Add lazy loading for images and update Docker Compose configuration
This commit adds lazy loading for images to improve page load performance. It also updates the Docker Compose configuration to include a volume for media files. This change ensures that media files are persisted across container restarts.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.nextjs
+    volumes:
+      - media_volume:/app/public/media
     depends_on:
       - web
 
