--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "image-extensions": "^1.1.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
