chore: Update default theme to system in layout.tsx, fix background image gradient, and add dark theme
feat: Add next-themes package for theme management

Update faq.json

Update README.md

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "transparlament",
-    "workspaceFolder": "/code",
+    "workspaceFolder": "/code/src",
     "dockerComposeFile": [
         "../docker-compose-dev.yml"
     ],
