--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "components/ui/stepper.tsx"
   ],
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@faker-js/faker": "^8.4.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -40,6 +41,7 @@
     "image-extensions": "^1.1.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
