--- a/nginx.conf
+++ b/nginx.conf
@@ -57,7 +57,7 @@ http {
             alias /media/;
         }
 
-        location /api/ {
+        location /apiInt/ {
             proxy_pass http://web:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
