--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "proj4": "^2.11.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@types/is-url": "^1.2.32",
     "@types/node": "^20",
+    "@types/proj4": "^2.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
