--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,14 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    upstream backend {
+        server web:${BACKEND_PORT_PLACEHOLDER};
+    }
+
+    upstream frontend {
+        server frontend:${FRONTEND_PORT_PLACEHOLDER};
+    }
+
     server {
         listen 80;
         server_name sejm-stats.pl www.sejm-stats.pl;
@@ -58,7 +66,7 @@ http {
         }
 
         location /apiInt/ {
-            proxy_pass http://web:8000;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -70,7 +78,7 @@ http {
         }
 
         location / {
-            proxy_pass http://frontend:3000;
+            proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
