--- a/nginx.conf
+++ b/nginx.conf
@@ -68,7 +68,13 @@ http {
             proxy_busy_buffers_size 64k;
             proxy_buffer_size 16k;
         }
-
+    location /favicon.ico {
+        proxy_pass http://frontend:3000/favicon.ico;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
         location / {
             proxy_pass http://frontend:3000;
             proxy_set_header Host $host;
