--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.28",
+    "fs": "^0.0.1-security",
     "highcharts": "^11.4.6",
     "highcharts-react-official": "^3.2.1",
     "image-extensions": "^1.1.0",
@@ -47,6 +48,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "proj4": "^2.11.0",
+    "promises": "^0.2.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
