Remove unnecessary Alpine tag from Dockerfile

--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -1,5 +1,5 @@
 # Use the official Python image from the Docker Hub
-FROM python:3.12-alpine
+FROM python:3.12
 
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
