--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -1,5 +1,5 @@
 # Use the official Python image from the Docker Hub
-FROM python:3.12
+FROM python:3.12 as base
 
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -11,7 +11,7 @@ WORKDIR /code
 
 # Install system dependencies
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends gcc libpq-dev postgresql-client  poppler-utils tesseract-ocr wget \
+    && apt-get install -y --no-install-recommends gcc libpq-dev postgresql-client poppler-utils tesseract-ocr wget \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && wget -O /tmp/pol.traineddata https://github.com/tesseract-ocr/tessdata/raw/main/pol.traineddata \
@@ -23,3 +23,16 @@ RUN pip install --upgrade pip && pip install -r requirements.txt
 
 # Copy application code
 COPY src/ /code/
+
+# Create a new stage for CUDA support
+FROM nvidia/cuda:11.8.0-runtime-ubuntu22.04 as cuda
+
+# Copy everything from the base image
+COPY --from=base / /
+
+# Set the working directory
+WORKDIR /code
+
+# Use an entrypoint script to choose the appropriate image at runtime
+COPY docker-entrypoint-celery.sh /docker-entrypoint-celery.sh
+RUN chmod +x /docker-entrypoint-celery.sh
