--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -1,9 +1,8 @@
 # Use the official PostgreSQL image as a base
-FROM postgres:16-alpine
+FROM postgres:16
 
 # Set the working directory
 WORKDIR /tmp
-
 # Copy the polish dictionary files into the container
 COPY tsearch_data/polish.affix /tmp/polish.affix
 COPY tsearch_data/polish.dict /tmp/polish.dict
@@ -13,3 +12,16 @@ COPY tsearch_data/polish.stop /tmp/polish.stop
 RUN cp polish.affix $(pg_config --sharedir)/tsearch_data/ \
     && cp polish.dict $(pg_config --sharedir)/tsearch_data/ \
     && cp polish.stop $(pg_config --sharedir)/tsearch_data/
+
+# Use the official PostgreSQL image as a base
+# Install necessary packages for building extensions and git
+RUN apt-get update && \
+    apt-get install -y build-essential postgresql-server-dev-16 git && \
+    git clone https://github.com/pgvector/pgvector.git && \
+    cd pgvector && \
+    make && \
+    make install && \
+    cd .. && \
+    apt-get autoremove -y && \
+    apt-get clean
+RUN echo "shared_preload_libraries = 'pgvector'" >> /usr/share/postgresql/postgresql.conf.sample
