--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ uvicorn==0.30.1
 djangorestframework-simplejwt
 gunicorn==22.0.0
 pytest==8.2.2
+pgvector==0.3.5
+sentence_transformers
 django==5.0
 django-crispy-forms==2.1
 crispy-bootstrap5==2024.2
